--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@mich4l/tor-client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Node.js Tor client",
   "main": "dist/index.js",
   "directories": {
-    "lib": "lib",
-    "test": "test"
+    "dist": "dist"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
