--- a/package.json
+++ b/package.json
@@ -28,10 +28,18 @@
   },
   "homepage": "https://github.com/mich4ld/tor-client#readme",
   "devDependencies": {
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.11.6",
-    "@types/qs": "^6.9.7"
+    "@types/qs": "^6.9.7",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7",
+    "typescript": "^4.4.4"
   },
   "dependencies": {
     "qs": "^6.10.1"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testTimeout": 30000
   }
 }
