--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,11 @@
     "module": "commonjs",
     "declaration": true,
     "declarationMap": true,
-    "outDir": "./dist", 
+    "outDir": "dist/cjs", 
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
   },
-  "exclude": ["tests", "downloads", "node_modules"]
+  "exclude": ["tests", "downloads", "node_modules/**"]
 }
